# weft

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml
src/: config.rs  error.rs  main.rs
src/commands/: init.rs  mod.rs  propose.rs  save.rs  share.rs  status.rs  sync.rs  undo.rs  weave.rs
src/git/: mod.rs
tests/: integration.rs
