[package]
name = "weft"
version = "0.1.0"
edition = "2021"
description = "Version control for dummies and teams - async git that never blocks"
authors = ["WEFT Contributors"]
repository = "https://github.com/weft-vcs/weft"

[[bin]]
name = "weft"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "6"
anyhow = "1"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
semver = { version = "1", features = ["std"] }
thiserror = "1"
whoami = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
